Fixed padding: in chrome it was too big

--- a/lizard_map/static/lizard_map/lizard_map.css
+++ b/lizard_map/static/lizard_map/lizard_map.css
@@ -40,7 +40,7 @@ position: fixed;
 }
 
 #edit-collage-table .ss_sprite {
-  padding-bottom: 4px;
+  padding-bottom: 3px;
 }
 
 #edit-collage-table .flot-graph-control-row {
